# minimalexampleofzigwithseL4

./: .tute_config  CMakeLists.txt  hello-world.md
src/: cImports.zig  freestanding_debug.zig  leb128.zig  main.c  seL4_wrapper.zig  self_dwarf.zig  serial.zig  zig_debug_symbols.lds  zig_helper.zig
